[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/tiles/Textures/nether reich syle concept.png" type="Texture" id=1]
[ext_resource path="res://statics/HighHouse/HouseRowGeneric.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/tiles/RoadNRoomComponent/RoadNRoomComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://logic/EnemySpawner/EnemySpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://logic/Trigger/Trigger.tscn" type="PackedScene" id=5]
[ext_resource path="res://utils/FogOfWar/FogOfWar.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/tiles/Road2Room/Road2Room.gd" type="Script" id=7]
[ext_resource path="res://logic/RoomDoor/RoomDoor.tscn" type="PackedScene" id=8]
[ext_resource path="res://pickups/RandomItemPickup/RandomItemPickup.tscn" type="PackedScene" id=9]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 1, 1, 20 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 25, 50 )

[node name="Road2" type="Spatial"]
script = ExtResource( 7 )

[node name="Statics" type="Spatial" parent="."]

[node name="Ground" type="CSGMesh" parent="Statics"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="Ground2" type="CSGMesh" parent="Statics"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 20 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="Ground3" type="CSGMesh" parent="Statics"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 14.9601, -0.01, 0 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="Ground4" type="CSGMesh" parent="Statics"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 14.9601, -0.01, 20 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="Spatial" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.4369, -2.3265, -8.36679 )

[node name="Spatial2" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.98195, -2.3265, 12.7777 )

[node name="Spatial4" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( -0.999999, 0, 0.00116912, 0, 1, 0, -0.00116912, 0, -0.999999, 19.7458, -2.3265, 18.9045 )

[node name="Spatial5" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( -0.535045, 0, -0.844823, 0, 1, 0, 0.844823, 0, -0.535045, 15.7892, -2.3265, -3.20104 )

[node name="Spatial3" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( 0.00588171, 0, 0.999983, 0, 1, 0, -0.999983, 0, 0.00588171, -5.72732, -2.3265, 29.0547 )

[node name="Spatial7" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( -0.533969, 0, 0.845504, 0, 1, 0, -0.845504, 0, -0.533969, 10.0637, -2.3265, 29.0547 )

[node name="Spatial6" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( 0.0811207, 0, -0.996704, 0, 1, 0, 0.996704, 0, 0.0811207, 4.70099, -2.3265, -10.0917 )

[node name="Trigger" parent="Statics" instance=ExtResource( 5 )]
transform = Transform( 3.5889, 0, 0, 0, 1, 0, 0, 0, 5.12497, 5.03121, 0, 7.1657 )

[node name="Spawners" type="Spatial" parent="Statics"]

[node name="EnemySpawner" parent="Statics/Spawners" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.84928, 0, 20.1547 )

[node name="EnemySpawner4" parent="Statics/Spawners" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.84928, 0, -3.14706 )

[node name="EnemySpawner5" parent="Statics/Spawners" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.05677, 0, -0.681636 )

[node name="EnemySpawner6" parent="Statics/Spawners" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.1951, 0.0200062, 8.01374 )

[node name="EnemySpawner7" parent="Statics/Spawners" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.35517, 0, 22.3345 )

[node name="EnemySpawner8" parent="Statics/Spawners" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5478, 0, 16.5337 )

[node name="EnemySpawner2" parent="Statics/Spawners" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.6661, 0, 1.52484 )

[node name="EnemySpawner3" parent="Statics/Spawners" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.9638, -10.5093, 23.924 )

[node name="OriginSouthRoomDoor" parent="Statics" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.923903, 0, -6.62831 )

[node name="OriginWestRoomDoor" parent="Statics" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.02459, 0, -0.00429487 )

[node name="OriginEastRoomDoor" parent="Statics" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 17.3014, 0, 7.20543 )

[node name="Child0NorthRoomDoor" parent="Statics" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.66633, 0, 25.6349 )

[node name="Child0WestRoomDoor" parent="Statics" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.7272, 0, 16.9045 )

[node name="Child0EastRoomDoor" parent="Statics" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 16.1273, 0, 14.7057 )

[node name="RandomItemPickup" parent="Statics" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11.9309 )

[node name="Navigation" type="Navigation" parent="."]

[node name="NavMeshTemplate" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 8.68008 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="RoadNRoomComponent" parent="." instance=ExtResource( 3 )]

[node name="FogOfWar" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.20292, 0, 1.81478, 0, 1, 0, -9.07389, 0, -0.840583, 23.3889, 2, -1.24249 )
